--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
         </div>
         <div class="card-footer">
           <button id="generate" class="btn">Generate Password</button>
+          <!-- added second button for copying the password text to the user's clipboard -->
           <button id='copy' class='btn' onclick='copyPassword()'>Copy Password</button>
         </div>
       </div>
